Minha resolução do desafio de código, criando a api de tarefa

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Server=NOTEBOOK-MARCOS\\SQLEXPRESS;Initial Catalog=Agenda;User Id=sa;Password=2000@edu.sau;TrustserverCertificate=True"
   }
 }
